; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_bus-socket.c_bus_socket_process_opening.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_bus-socket.c_bus_socket_process_opening.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32, i32 }
%struct.pollfd = type { i32, i32, i32 }

@POLLOUT = common dso_local global i32 0, align 4
@BUS_OPENING = common dso_local global i64 0, align 8
@errno = common dso_local global i32 0, align 4
@POLLERR = common dso_local global i32 0, align 4
@POLLHUP = common dso_local global i32 0, align 4
@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_ERROR = common dso_local global i32 0, align 4
@ECONNREFUSED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bus_socket_process_opening(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.pollfd, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 0, i32* %4, align 4
  store i32 4, i32* %5, align 4
  %8 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %6, i32 0, i32 0
  %9 = load i32, i32* @POLLOUT, align 4
  store i32 %9, i32* %8, align 4
  %10 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %6, i32 0, i32 1
  store i32 0, i32* %10, align 4
  %11 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %6, i32 0, i32 2
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %11, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @BUS_OPENING, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  %22 = call i32 @poll(%struct.pollfd* %6, i32 1, i32 0)
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %1
  %26 = load i32, i32* @errno, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %2, align 4
  br label %79

28:                                               ; preds = %1
  %29 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %6, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @POLLOUT, align 4
  %32 = load i32, i32* @POLLERR, align 4
  %33 = or i32 %31, %32
  %34 = load i32, i32* @POLLHUP, align 4
  %35 = or i32 %33, %34
  %36 = and i32 %30, %35
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %39, label %38

38:                                               ; preds = %28
  store i32 0, i32* %2, align 4
  br label %79

39:                                               ; preds = %28
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 2
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* @SOL_SOCKET, align 4
  %44 = load i32, i32* @SO_ERROR, align 4
  %45 = call i32 @getsockopt(i32 %42, i32 %43, i32 %44, i32* %4, i32* %5)
  store i32 %45, i32* %7, align 4
  %46 = load i32, i32* %7, align 4
  %47 = icmp slt i32 %46, 0
  br i1 %47, label %48, label %52

48:                                               ; preds = %39
  %49 = load i32, i32* @errno, align 4
  %50 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %51 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %50, i32 0, i32 1
  store i32 %49, i32* %51, align 8
  br label %76

52:                                               ; preds = %39
  %53 = load i32, i32* %4, align 4
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %59

55:                                               ; preds = %52
  %56 = load i32, i32* %4, align 4
  %57 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %58 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %57, i32 0, i32 1
  store i32 %56, i32* %58, align 8
  br label %75

59:                                               ; preds = %52
  %60 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %6, i32 0, i32 1
  %61 = load i32, i32* %60, align 4
  %62 = load i32, i32* @POLLERR, align 4
  %63 = load i32, i32* @POLLHUP, align 4
  %64 = or i32 %62, %63
  %65 = and i32 %61, %64
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %71

67:                                               ; preds = %59
  %68 = load i32, i32* @ECONNREFUSED, align 4
  %69 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %70 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %69, i32 0, i32 1
  store i32 %68, i32* %70, align 8
  br label %74

71:                                               ; preds = %59
  %72 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %73 = call i32 @bus_socket_start_auth(%struct.TYPE_5__* %72)
  store i32 %73, i32* %2, align 4
  br label %79

74:                                               ; preds = %67
  br label %75

75:                                               ; preds = %74, %55
  br label %76

76:                                               ; preds = %75, %48
  %77 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %78 = call i32 @bus_next_address(%struct.TYPE_5__* %77)
  store i32 %78, i32* %2, align 4
  br label %79

79:                                               ; preds = %76, %71, %38, %25
  %80 = load i32, i32* %2, align 4
  ret i32 %80
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @poll(%struct.pollfd*, i32, i32) #1

declare dso_local i32 @getsockopt(i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @bus_socket_start_auth(%struct.TYPE_5__*) #1

declare dso_local i32 @bus_next_address(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
